[package]
name = "proxy-https-serv_"
version = "0.1.0"
edition = "2024"
[lib]
name = "proxy_https_serv"
path = "src/lib.rs"

[[bin]]
name = "proxy-https-serv"
path = "src/main.rs"

[dependencies]
hyper = { version = "0.14", features = ["server", "http1", "http2"] }
tokio = { version = "1.0", features = ["full"] }
rustls = "0.23.27"
tokio-rustls = "0.26.2"
hyper-rustls = "0.23.0"
webpki-roots = "0.25.0"
log = "0.4.0"
env_logger = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.7.0"
rustls-pemfile = "2.1.0"
chrono = "0.4.41"
hyper-tls = "0.5"
hyper-util = "0.1.11"
prometheus = "0.13.0"
lazy_static = "1.4.0"